--- a/whereto/uwsgi.ini
+++ b/whereto/uwsgi.ini
@@ -1,12 +1,12 @@
 [uwsgi]
 
-chdir =/home/hoon/whereto/
+chdir =/home/ec2-user/whereto/
 module = config.wsgi:application
-socket =/home/hoon/whereto/django.sock
+socket =/home/ec2-user/whereto/django.sock
 chmod-socket=666
 
 
-export PYTHONPATH=/home/hoon/whereto/:$PYTHONPATH
+export PYTHONPATH=/home/ec2-user/whereto/:$PYTHONPATH
 
 master = true
 enable-threads = true
