--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
         ports:
           - "80:80"
         volumes:
-          - ./whereto:/home/hoon/whereto
+          - ./whereto:/home/ec2-user/whereto
           - ./log:/var/log/nginx
-          - ./whereto/static/:/home/hoon/whereto/static
+          - ./whereto/static/:/home/ec2-user/whereto/static
         depends_on:
           - django
     django:
@@ -22,7 +22,7 @@ services:
         restart: always
         command: uwsgi --ini uwsgi.ini
         volumes:
-          - ./whereto:/home/hoon/whereto
+          - ./whereto:/home/ec2-user/whereto
           - ./log:/var/log/uwsgi
         depends_on:
           - database
@@ -33,8 +33,8 @@ services:
         ports:
           - "3306:3306"
         environment:
-          - MYSQL_ROOT_PASSWORD=1
-          - MYSQL_DATABASE=devdb
+          - MYSQL_ROOT_PASSWORD=shinpingu1
+          - MYSQL_DATABASE=wheretoDB
         volumes:
           - ./database/mysql_data:/var/lib/mysql
         command:
